# amm-tiny

./: .cproject  .cwGeneratedFileSetLog  .gitignore  .gitmodules  .project  CMakeLists.txt  Project.cbp  README.md  amm-tiny_Debug_Segger.launch  armgcc.cmake  clean.sh  documentation.md  fix_blank_flash_with_external_programmer.sh  flash.sh  gdb_instructions.md  gdb_instructions.txt  gencmake.sh  kinetis_daplink.cfg  launch-openocd-remote.sh  launch-openocd.sh  maxon-notes.txt  remote_api.md  reset_k66.sh  spi_protocol_Debug_Segger.launch  spi_protocol_Release_Segger.launch
Debug/: amm-tiny.map  makefile  sources.mk  spi_protocol.map
Debug/board/: subdir.mk
Debug/drivers/: subdir.mk
Debug/freertos/Source/: subdir.mk
Debug/freertos/Source/portable/GCC/ARM_CM4F/: subdir.mk
Debug/freertos/Source/portable/MemMang/: subdir.mk
Debug/source/: subdir.mk
Debug/startup/: subdir.mk
Debug/utilities/: subdir.mk
board/: pin_mux.c
source/: CREST_adc_tester.cpp  FreeRTOSConfig.h  action.cpp  action.h  amm-tiny.cpp  amm-torso.cpp  bleeder.cpp  button.cpp  button.h  carrier_gpio.h  flowsensor.cpp  flowsensor.h  fluidmanager.cpp  heartrate.cpp  heartrate.h  heartrateLED.cpp  ivc.cpp  main.cpp  maxon.cpp  maxon.h  motorcontrol.cpp  motorcontrol.h  pressure_adc.cpp  pressure_adc.h  pressuresensor.cpp  pressuresensor.h  seattle_demo.cpp  seattle_demo.h  sensirion.cpp  sensirion.h  solenoid.cpp  solenoid.h  spi_chunk_defines.h  spi_chunks.cpp  spi_chunks.h  spi_chunks_slave.cpp  spi_chunks_slave.h  spi_edma_task.cpp  spi_proto.cpp  spi_proto.h  (+5 more)
source/ammdk-carrier/: ammdk-gpios.c  ammdk_hat_1.0.c  ammdk_hat_2.0.c  carrier_gpio.cpp  carrier_gpio.h  dac.cpp  dac.h  maxon.cpp  maxon.h  solenoid.cpp  solenoid.h
source/controllers/: adc.cpp  adc.h  dac.cpp  dac.h  gpio.cpp  gpio.h  motor.cpp  motor.h  valve.cpp  valve.h
source/mule-1/: air_tank.cpp  air_tank.h
